--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-468.4KB/s(Youtube:不良林), server: 116.129.254.177, port: 65096, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇨🇳 中国-160.8KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-4.68MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20712, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-214.1KB/s(Youtube:不良林), server: v2.tgfaka.com, port: 8443, type: vmess, uuid: 00b19c02-bc00-440a-a397-faf70ac3f44e, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v2.tgfaka.com}}
-  - {name: 🇸🇬 新加坡-3.55MB/s(Youtube:不良林), server: sg-03.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-03.licom.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-510.5KB/s(Youtube:不良林), server: 116.129.254.177, port: 65043, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇭🇰 香港-4.97MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20712, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇭🇰 (已存活6天)香港-3.42MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
+  - {name: 🇷🇺 俄罗斯联邦-3.46MB/s(Youtube:不良林), server: 141.98.168.251, port: 443, type: trojan, password: LiX1tV, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-5.69MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇺🇸 美国-4.64MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
   - {name: 🇺🇸 美国-4.36MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
   - {name: 🇺🇸 美国-4.72MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: ffec9f6ea19e1dd1, skip-cert-verify: true}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-468.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-160.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-214.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-510.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.97MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活6天)香港-3.42MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.69MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.72MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-468.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-160.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-214.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-510.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.97MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活6天)香港-3.42MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.69MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.72MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-468.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-160.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-214.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-510.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.97MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活6天)香港-3.42MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.69MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.72MB/s(Youtube:不良林)
@@ -66,18 +66,19 @@ proxy-groups:
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-4.68MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.97MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活6天)香港-3.42MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-468.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-160.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-214.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-510.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.97MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活6天)香港-3.42MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.69MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.72MB/s(Youtube:不良林)
@@ -88,11 +89,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-468.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-160.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-214.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-510.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.97MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活6天)香港-3.42MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.69MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.72MB/s(Youtube:不良林)
@@ -104,11 +105,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-468.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-160.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-214.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-510.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.97MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活6天)香港-3.42MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.69MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.72MB/s(Youtube:不良林)
@@ -129,11 +130,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-468.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-160.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-214.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-510.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.97MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活6天)香港-3.42MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.69MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.72MB/s(Youtube:不良林)
