--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-510.5KB/s(Youtube:不良林), server: 116.129.254.177, port: 65043, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇨🇳 中国-500.8KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65097, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
   - {name: 🇭🇰 香港-4.97MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20712, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇭🇰 (已存活6天)香港-3.42MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
-  - {name: 🇷🇺 俄罗斯联邦-3.46MB/s(Youtube:不良林), server: 141.98.168.251, port: 443, type: trojan, password: LiX1tV, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-5.69MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.74MB/s(Youtube:不良林), server: v3.tgfaka.com, port: 8443, type: vmess, uuid: 6938c10f-c1a0-43e3-8321-099055f79853, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v3.tgfaka.com}}
+  - {name: 🇺🇸 美国-4.39MB/s(Youtube:不良林), server: 51.81.223.10, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-305.4KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65087, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
   - {name: 🇺🇸 美国-4.64MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
   - {name: 🇺🇸 美国-4.36MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
   - {name: 🇺🇸 美国-4.72MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: ffec9f6ea19e1dd1, skip-cert-verify: true}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-510.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-500.8KB/s(Youtube:不良林)
       - 🇭🇰 香港-4.97MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活6天)香港-3.42MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-305.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.72MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-510.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-500.8KB/s(Youtube:不良林)
       - 🇭🇰 香港-4.97MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活6天)香港-3.42MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-305.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.72MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-510.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-500.8KB/s(Youtube:不良林)
       - 🇭🇰 香港-4.97MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活6天)香港-3.42MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-305.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.72MB/s(Youtube:不良林)
@@ -67,18 +67,17 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🇭🇰 香港-4.97MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活6天)香港-3.42MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-510.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-500.8KB/s(Youtube:不良林)
       - 🇭🇰 香港-4.97MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活6天)香港-3.42MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-305.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.72MB/s(Youtube:不良林)
@@ -89,11 +88,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-510.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-500.8KB/s(Youtube:不良林)
       - 🇭🇰 香港-4.97MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活6天)香港-3.42MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-305.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.72MB/s(Youtube:不良林)
@@ -105,11 +104,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-510.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-500.8KB/s(Youtube:不良林)
       - 🇭🇰 香港-4.97MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活6天)香港-3.42MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-305.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.72MB/s(Youtube:不良林)
@@ -130,11 +129,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-510.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-500.8KB/s(Youtube:不良林)
       - 🇭🇰 香港-4.97MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活6天)香港-3.42MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-305.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.72MB/s(Youtube:不良林)
