--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,15 +5,15 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-500.8KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65097, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
-  - {name: 🇳🇱 荷兰-410.6KB/s(Youtube:不良林), server: 213.183.59.229, port: 9064, type: ss, cipher: aes-256-cfb, password: cp8pRSUAyLhTfVWH}
-  - {name: 🇨🇳 中国-4.48MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
-  - {name: 🇳🇱 荷兰-2.57MB/s(Youtube:不良林), server: youtube-bai-piao-wang-zhe.nl.884899.cf, port: 41196, type: trojan, password: 94afcc56-cc1c-4cd4-8c82-1215cd052795, sni: youtube-bai-piao-wang-zhe.nl.884899.cf, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.74MB/s(Youtube:不良林), server: v3.tgfaka.com, port: 8443, type: vmess, uuid: 6938c10f-c1a0-43e3-8321-099055f79853, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v3.tgfaka.com}}
+  - {name: 捷克-346.3KB/s(Youtube:不良林), server: v2cross.com.02.v2ce.com, port: 443, type: trojan, password: 3gLlCYBipVwr6Y5F, sni: v2cross.com.02.v2ce.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.52MB/s(Youtube:不良林), server: 51.81.223.26, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.48MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-3.65MB/s(Youtube:不良林), server: bai-piao-wang-zhe.us.567568.ml, port: 19568, type: trojan, password: AglrNchEnS, sni: bai-piao-wang-zhe.us.567568.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-510.5KB/s(Youtube:不良林), server: 116.129.254.177, port: 65043, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
   - {name: 🇺🇸 美国-4.64MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
   - {name: 🇺🇸 美国-4.59MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
   - {name: 🇺🇸 美国-4.72MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: ffec9f6ea19e1dd1, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.57MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.98MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
   - {name: 🇺🇸 美国-4.84MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: 711aabc21e45ae31, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
@@ -21,30 +21,30 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-500.8KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-410.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.48MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.74MB/s(Youtube:不良林)
+      - 捷克-346.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.48MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-510.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.59MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.98MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.84MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-500.8KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-410.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.48MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.74MB/s(Youtube:不良林)
+      - 捷克-346.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.48MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-510.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.59MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.98MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.84MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
@@ -52,15 +52,15 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-500.8KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-410.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.48MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.74MB/s(Youtube:不良林)
+      - 捷克-346.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.48MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-510.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.59MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.98MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.84MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
@@ -72,30 +72,30 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-500.8KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-410.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.48MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.74MB/s(Youtube:不良林)
+      - 捷克-346.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.48MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-510.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.59MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.98MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.84MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-500.8KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-410.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.48MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.74MB/s(Youtube:不良林)
+      - 捷克-346.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.48MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-510.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.59MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.98MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.84MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
@@ -103,15 +103,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-500.8KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-410.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.48MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.74MB/s(Youtube:不良林)
+      - 捷克-346.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.48MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-510.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.59MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.98MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.84MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
@@ -128,15 +128,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-500.8KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-410.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.48MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.74MB/s(Youtube:不良林)
+      - 捷克-346.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.48MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-510.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.59MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.98MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.84MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
